<resources>
    <string name="app_name">Work Logger</string>
    <string name="title_activity_maps">Find an address</string>
    <string name="map_search_address">Enter your work site address:</string>
    <string name="maps_activity_search">Search</string>
    <string name="locations_activity_label">Active Work Locations:</string>
    <string name="maps_activity_save">Save</string>
    <string name="main_activity_currently_working_at">Currently working at:</string>
    <string name="main_activity_not_at_worksite">Not at worksite</string>
    <string name="hours_worked_placeholder">0</string>
    <string name="main_activity_hours_worked">Hours worked:</string>
    <string name="current_period_activity_no_entries_toast_msg">There are no entries in the current period to save.</string>
    <string name="current_period_activity_entries_saved_toast_msg">All entries have been saved to the previous period. \n You can check the previous period in the main menu.</string>
    <string name="locations_activity_popup_confirmation_msg">"Are you sure you want to delete "</string>
    <string name="locations_activity_popup_yes">Yes</string>
    <string name="locations_activity_popup_no">No</string>
    <string name="locations_activity_toast_feedback_suffix">" deleted."</string>
    <string name="main_activity_perm_not_granted_effects">Work Site Location detection will not work</string>
    <string name="main_activity_welcome">Welcome!</string>
    <string name="main_activity_get_started_instruction">Get started by saving the places you work:</string>
    <string name="main_activity_set_locations_btn_label">Set Locations</string>
    <string name="main_activity_guide_view_hours">View your hours worked:</string>
    <string name="main_activity_view_current_period_btn_label">View Current Period</string>
    <string name="main_activity_view_previous_periods_btn_label">View Previous Periods</string>
    <string name="generic_address_1">15 Broadway Ultimo</string>
    <string name="generic_address_2">1 Harbour St</string>
    <string name="generic_address_3">110 Burwood Rd</string>
    <string name="generic_date_1">03/11/16</string>
    <string name="generic_date_2">04/11/16</string>
    <string name="generic_date_3">05/11/16</string>
    <string name="search_timed_out">Search timed out, please check your connection</string>
    <string name="no_address_entered_warning">Please enter an address</string>
    <string name="address_already_saved_warning">This address has already been saved.</string>
    <string name="current_period_activity_save_all_btn_label">Save All To Previous Period</string>
    <string name="notification_entering_prefix">"Started work at "</string>
    <string name="notification_exiting_prefix">"Stopped work at "</string>
    <string name="notification_click_instruction">Click to view hours worked here today!</string>
    <string name="locations_activity_explanation">These are the addresses that you work at.</string>
    <string name="locations_activity_removal_instruction">Click an address to remove it.</string>
    <string name="locations_activity_new_address_instruction">Click the circular button to add a new address.</string>
    <string name="log_row_placeholder_date">26/10/16</string>
    <string name="log_row_placeholder_address">15 Broadway Ultimo</string>
    <string name="log_row_placeholder_hours">6</string>
    <string name="work_log_recycler_view_date_header">Date:</string>
    <string name="work_log_recycler_view_address_header">Address:</string>
    <string name="work_log_recycler_view_hours_header">Hours:</string>
    <string name="current_period_activity_label">Current Work Period</string>
    <string name="previous_period_activity_title">Previous Work Logs</string>
</resources>
